Replace flagged legacy collection/reflection usages
Agent-Logs-Url: https://github.com/hazendaz/jmockit1/sessions/ed08e1be-d91d-4d00-ab35-e5062b25acc0

Co-authored-by: hazendaz <975267+hazendaz@users.noreply.github.com>